---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Changes:
    - Made the perel framework global
    - Generalized post event subtick handler
    - Split cirucit network handlers into it's own file
    - Merged fire_events into handlers
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-11-19
  Changes:
    - Removed log spam
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-11-19
  Features:
    - Proper support for most nonstandard methods of interaction [platforms/robots/players/scripts(opt-in)/blueprints]
  Changes:
    - Switched to an internal event manager for easier management later on
    - Switch to a ScriptInventory to trigger subtick events
  Bugfixes:
    - Prevent a VERY STRONG memory leak
    - Fixed event.name being a string of the event name instead of the integer registration identifier
    - Fixed on_pre_circuit_network_destroyed and on_pre_circuit_network_split not firing
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-08-21
  Changes:
    - Added prefired variations of the circuit network events
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-08-21
  Features:
    - Initial release