@@ -2,9 +2,10 @@ perel = require "__perel__.handlers"
 
 perel.on_init(function()
   storage = {
-    circuit_network_last_added = storage.circuit_network_last_added or {},
+    grandfather = storage.grandfather or game.create_inventory(1),
     event_deathrattles = storage.event_deathrattles or {},
-    grandfather = storage.grandfather or game.create_inventory(1)
+    circuit_network_last_added = storage.circuit_network_last_added or {},
+    wire_connection_target_cache = { ["entity-ghost"] = false } -- dynamically generated, cleared when mods change/update
   }
 end)
 
